syntax = "proto3";

package forest;

message PutStateRequest {
  repeated string keys = 1;
  bytes value = 2;
}

message GetStateRequest {
  repeated string keys = 1;
}

message GetHistoryRequest {
  repeated string keys = 1;
}

message GetHistoryResponse {
  repeated KeyModification key_modifications = 1;
}

message KeyModification {
  string tx_id = 1;
  bytes value = 2;
  int64 timestamp = 3;
  bool is_delete = 4;
}
